weather app thumbnail fix, button project button spacing, card height fix.

--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -261,3 +261,7 @@
 
 		width: 25%;
 		}
+		#root > div > div:nth-child(5) > div:nth-child(2) > div > div:nth-child(4){
+
+		width: 25%;
+		}
